infra/kubernetes/apps/banking-frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: banking-system
spec:
  rules:
    - host: iate.space
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: banking-frontend
                port:
                  number: 80
